syntax = "proto3";

package ne_cache.grpc;
option go_package = "./grpc";

message HealthCheckRequest {
}

message HealthCheckResponse {
  enum ServingStatus {
	UNKNOWN = 0;
	SERVING = 1;
	NOTSERVING = 2;
  }
  ServingStatus status = 1;
}

service NodeHealth {
  rpc NodeHealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}
